shrink text and box size on smaller screens, fix vertical centering

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ li {
 }
 
 /* RESPONSIVE */
-/* @media only screen and (max-width: 1400px) {
+@media only screen and (max-width: 1400px) {
   :root {
     font-size: 12px;
   }
@@ -60,7 +60,7 @@ li {
     width: 100%;
     padding: 20px 0 0 0;
   }
-} */
+}
 
 /* WEEK PICKER */
 .week-picker {
