--- a/src/styles/popups.css
+++ b/src/styles/popups.css
@@ -22,9 +22,19 @@
   color: #fff;
   overflow: hidden;
   border-radius: 13px;
+  padding: 0 30px;
 }
 .popup-wht {
   background-color: #fff;
+}
+
+@media only screen and (max-width: 1400px) {
+  .popup {
+    height: 50vh;
+    max-height: 405px;
+    width: 50vw;
+    max-width: 812px;
+  }
 }
 
 .share-linkedin {
@@ -42,6 +52,8 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  align-content: center;
+  margin-top: -38px;
 }
 
 /* CLOSE BTN */
@@ -49,11 +61,9 @@
   font-weight: 100;
   font-size: 4.7rem;
   text-align: right;
-  margin: 0 10px;
+  position: relative;
   z-index: 10;
-  align-self: flex-start;
-  justify-self: end;
-  width: 100%;
+  width: 103%;
   height: 24px;
 }
 
@@ -64,10 +74,14 @@
 
 .share-linkedin #close-btn {
   color: var(--main-blue);
+  right: 13px;
 }
 
 .popup-wht #close-btn {
   color: var(--main-blue);
+}
+.invite-friends #close-btn {
+  margin-top: 0px;
 }
 
 /* POPUP TEXT */
@@ -75,7 +89,6 @@
   text-align: center;
   justify-self: center;
   align-self: center;
-  margin-top: -20vh;
 }
 
 .popup .underline {
@@ -191,7 +204,6 @@
   max-width: 1330px;
   height: 75vh;
   max-height: 638px;
-  margin-top: -3vh;
 }
 .popup-joined .popup-text {
   width: 100%;
@@ -226,7 +238,7 @@
 }
 .popup-joined .image-container {
   background-color: #fff;
-  width: 101%;
+  width: 111%;
   height: 101%;
   border-radius: 0 13px 13px 0;
   display: flex;
@@ -273,14 +285,14 @@
 /* INVITE FRIENDS */
 .invite-friends {
   width: 656px;
-  height: 95vh;
+  height: 85vh;
   max-height: 819px;
-  margin-top: 4vh;
+  margin-top: 6vh;
 }
 
 .invite-friends p {
   color: #757a7f;
-  margin-top: 20px;
+  margin-top: 15px;
   margin-bottom: 20px;
 }
 .invite-friends input {
@@ -302,6 +314,7 @@
 .invite-friends .invite-btn {
   width: 302px;
   height: 50px;
+  margin-top: 10px;
 }
 .invite-friends #send-invite-btn:disabled {
   background-color: #c9c9c9;
@@ -312,4 +325,15 @@
 }
 .invite-friends #sent-invite-btn:hover {
   background-color: #04cccc;
+}
+
+@media only screen and (max-width: 1400px) {
+  .invite-friends {
+    width: 600px;
+    height: 78vh;
+    margin-top: 10vh;
+  }
+  .invite-friends input {
+    height: 40px;
+  }
 }
